# shopyo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGES.md  MANIFEST.in  README.md  SECURITY.md  comparison.md  publish.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cflite_pr.yml  codeql-analysis.yml  codesee-arch-diagram.yml  scoreboard.yml  tests.yaml
default_packages/shopyo_appadmin/: README.md  pyproject.toml
default_packages/shopyo_appadmin/shopyo_appadmin/: __init__.py  admin.py  info.json  view.py
default_packages/shopyo_appadmin/shopyo_appadmin/templates/shopyo_appadmin/: add.html  edit.html  index.html  roles.html
default_packages/shopyo_appadmin/shopyo_appadmin/templates/shopyo_appadmin/blocks/: sidebar.html
default_packages/shopyo_appadmin/tests/: test_admin.py
default_packages/shopyo_auth/: README.md  pyproject.toml
default_packages/shopyo_auth/shopyo_auth/: __init__.py  forms.py  info.json  models.py  upload.py  view.py
default_packages/shopyo_auth/shopyo_auth/templates/shopyo_auth/: login.html  register.html
default_packages/shopyo_auth/tests/: conftest.py  factories.py  test_auth_functional.py  test_auth_models.py
default_packages/shopyo_base/: pyproject.toml
default_packages/shopyo_base/shopyo_base/: __init__.py  info.json
default_packages/shopyo_base/shopyo_base/templates/shopyo_base/: main_base.html  module_base.html  nav_base.html
default_packages/shopyo_base/shopyo_base/templates/shopyo_base/blocks/: resources.html
default_packages/shopyo_dashboard/: README.md  pyproject.toml
default_packages/shopyo_dashboard/shopyo_dashboard/: __init__.py  info.json  view.py
default_packages/shopyo_dashboard/shopyo_dashboard/templates/shopyo_dashboard/: index.html
default_packages/shopyo_dashboard/tests/: test_dashboard.py
default_packages/shopyo_i18n/: README.md  pyproject.toml
default_packages/shopyo_i18n/shopyo_i18n/: __init__.py  models.py  view.py
default_packages/shopyo_i18n/shopyo_i18n/templates/shopyo_i18n/: dashboard.html
default_packages/shopyo_page/: README.md  pyproject.toml
default_packages/shopyo_page/shopyo_page/: __init__.py  forms.py  info.json  models.py  view.py
default_packages/shopyo_page/shopyo_page/templates/page/: all_pages.html
default_packages/shopyo_page/shopyo_page/templates/shopyo_page/: all_pages.html  dashboard.html  view_page_dashboard.html
default_packages/shopyo_page/shopyo_page/templates/shopyo_page/blocks/: sidebar.html
default_packages/shopyo_settings/: pyproject.toml
default_packages/shopyo_settings/shopyo_settings/: __init__.py  helpers.py  info.json  upload.py
default_packages/shopyo_theme/: README.md  pyproject.toml
default_packages/shopyo_theme/shopyo_theme/: __init__.py  helpers.py  info.json  view.py
default_packages/shopyo_theme/shopyo_theme/templates/shopyo_theme/: index.html
docs/: assets.rst  commandline.rst  conf.py  contrib.rst  docs.rst  existing.rst  index.rst  init.rst  models.rst  modules.rst  packages.rst  setup.rst  shared_hosting.rst  shopyoapi.rst  templates.rst  testing.rst  usage.rst  views.rst
requirements/: dev.in  dev.txt  docs.in  docs.txt  requirements.txt  tests.in  tests.txt
shopyo/: CHANGELOG.md  __init__.py  __main__.py  app.py  app.txt  autoapp.py  config.py  config_demo.json  conftest.py  init.py  manage.py  shopyo_admin.py  wsgi.py
shopyo/api/: assets.py  cli.py  cli_content.py  cmd.py  cmd_helper.py  database.py  debug.py  email.py  enhance.py  file.py  forms.py  html.py  info.py  models.py  module.py  security.py  templates.py  validators.py
shopyo/api/tests/: conftest.py  test_cli.py  test_cli_integration.py  test_constants.py  test_email.py  test_enhance.py  test_models.py  test_print_info.py  test_security.py  test_validators.py
shopyo/modules/: __init__.py
shopyo/modules/box__bizhelp/appointment/: info.json  models.py  view.py
shopyo/modules/box__bizhelp/contact/: forms.py  info.json  models.py  view.py
shopyo/modules/box__bizhelp/i18n/: global.py  helpers.py  info.json  models.py  view.py
shopyo/modules/box__bizhelp/page/: forms.py  info.json  models.py  view.py
shopyo/modules/box__bizhelp/page/templates/page/: all_pages.html  dashboard.html  view_page.html
shopyo/modules/box__bizhelp/people/: info.json  models.py  view.py
shopyo/modules/box__default/appadmin/: admin.py  info.json  view.py
shopyo/modules/box__default/appadmin/templates/appadmin/: add.html  edit.html  index.html  roles.html
shopyo/modules/box__default/appadmin/tests/: test_admin.py
shopyo/modules/box__default/auth/: email.py  forms.py  info.json  models.py  upload.py  view.py
shopyo/modules/box__default/auth/templates/auth/: login.html  register.html  unconfirmed.html
shopyo/modules/box__default/auth/tests/: factories.py  test_auth_functional.py  test_auth_models.py  test_email.py
shopyo/modules/box__default/base/: info.json
shopyo/modules/box__default/dashboard/: info.json  view.py
shopyo/modules/box__default/dashboard/templates/dashboard/: index.html
shopyo/modules/box__default/dashboard/tests/: test_dashboard.py
shopyo/modules/box__default/i18n/: view.py
shopyo/modules/box__default/page/: forms.py  models.py  view.py
shopyo/modules/box__default/page/templates/page/: dashboard.html  view_page_dashboard.html
shopyo/modules/box__default/settings/: helpers.py  info.json  models.py  upload.py
shopyo/modules/box__default/settings/templates/settings/: edit.html  index.html
shopyo/modules/box__default/theme/: global.py  view.py
shopyo/modules/box__tests/: box_info.json
shopyo/modules/box__tests/test1/: info.json
shopyo/modules/box__tests/test1/static/: file.css
shopyo/modules/qqq/: info.json
shopyo/modules/resource/: info.json  models.py  view.py
shopyo/modules/tests/: global.py  info.json
shopyo/modules/tests/static/: file.css
shopyo/modules/tests/tests/: test_tests_functional.py
shopyo/modules/www/: view.py
shopyo/static/themes/front/blogus/: index.html
shopyo/tests/: conftest.py  test_configs.py  test_dunder_main.py  test_manage.py
(+1 files in other folders)
