[metadata]
# replace with your username:
name = shopyo
version = attr: shopyo.__version__
url = https://shopyo.readthedocs.io/en/latest/
project_urls =
    Source Code = https://github.com/shopyo/shopyo/
    Issue Tracker = https://github.com/shopyo/shopyo/issues
    Twitter = https://twitter.com/shopyoproject
license = MIT
author = Abdur-Rahmaan Janhangeer
author_email = arj.python@gmail.com
description = Highly modular web framework built on top of Flask with Django advantages
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
include_package_data = true
python_requires = >=3.6
packages = shopyo

[options.entry_points]
console_scripts =
    shopyo = shopyo.api.cli:cli

[flake8]
max-line-length = 80