[metadata]
# replace with your username:
name = shopyo
version = attr: shopyo.__version__
url = https://shopyo.readthedocs.io/en/latest/
project_urls =
    Source Code = https://github.com/shopyo/shopyo/
    Issue Tracker = https://github.com/shopyo/shopyo/issues
    Changelog = https://github.com/shopyo/shopyo/blob/dev/CHANGES.md
    Twitter = https://twitter.com/shopyoproject

license = MIT
author = Abdur-Rahmaan Janhangeer
author_email = arj.python@gmail.com
description = Highly modular web framework built on top of Flask with Django advantages
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Flask, Django, web framework, modular
classifiers =
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
include_package_data = true
python_requires = >=3.6
packages = shopyo

[options.entry_points]
console_scripts =
    shopyo = shopyo.api.cli:cli

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # ignore the line lenght in cli_content for now.
    shopyo/api/cli_content.py: E501
